# silverfish

./: .gitignore  Cargo.toml  build.rs
src/: attacks.rs  bitboards.rs  book.rs  book.yml  castling.rs  colours.rs  errors.rs  eval.rs  helpers.rs  main.rs  moves.rs  perft.rs  pieces.rs  search.rs  state.rs  uci.rs  zobrist.rs
src/tests/: eval.rs  mod.rs  perft.rs  search.rs  uci.rs
