[package]
name = "silverfish"
version = "5.0.0"
authors = ["Callum Browne <callum@callumbrowne.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
more-asserts = "0.2.1"
regex = "1.4.2"

[build-dependencies]
rand = "0.5.4"