[package]
name = "silverfish"
version = "10.0.0"
authors = ["Callum Browne <callum@callumbrowne.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
more-asserts = "0.2.1"
regex = "1.4.2"
shakmaty = "0.18.0"
shakmaty-syzygy = "0.15.0"
getopts = "0.2.21"
lazy_static = "1.4.0"
rand = "0.5.4"
serde_yaml = "0.8.17"

[build-dependencies]
rand = "0.5.4"